# UFG

./: .blog-meta.json  .gitignore  .releaserc  404.html  CHANGELOG.md  Makefile  README.md  build.gradle.kts  docker-compose.yml  index.html  mkdocs.yml  report-template.md  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  jarBuild.yml  release.yml
Report_distributed/: .gitignore  Makefile  badstuff.md  main.qd  setup.qd  title.qd
Report_distributed/scripts/: build.sh  clean.sh  common.sh  pdf.sh  preview.sh
Report_distributed/sections/: abstract.qd  concept.qd  deployment.qd  design.qd  future-works.qd  implementation.qd  introduction.qd  requirements.qd  self-evaluation.qd  user-guide.qd  validation.qd
about/: index.html
architecture/: index.html
authentication/: Dockerfile  docker-compose.fragment.yml  go.mod  go.sum  handler.go  main.go  ratelimit.go  repository.go  token.go
benchmarks/: README.md  RESULTS.md
channel/: CMakeLists.txt
channel/include/: webrtc_wrapper.h
channel/src/: main.cpp  webrtc_wrapper.cpp
channel/test/: local_test.cpp  protocol_test.cpp
docs/: about.md  architecture.md  benchmarks.md  concept.md  deployment.md  design.md  future_works.md  implementation.md  index.md  logging.md  networking.md  onboarding.md  requirements.md  rollback.md  setup.md  user_guide.md  validation.md
game/: build.gradle.kts
onboarding/: index.html
report_ds/: .gitignore
search/: search_index.json
setup/: index.html
signaling_server/: Dockerfile  go.mod  main.go
site/: 404.html  index.html  sitemap.xml
(+203 files in other folders)
